# tco

./: Cargo.toml  README.md
examples/async/: main.rs
examples/factorial/: main.rs
src/: lib.rs
tests/: ui.rs
tests/fail/: await_no_tco.rs  await_no_tco.stderr  non_tco_op.rs  non_tco_op.stderr
tests/pass/: factorial.rs
